<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienttwo"
    tools:context=".HasilDiagnosaJantungActivity">

    <LinearLayout
        android:id="@+id/linear_hasilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_hasilJantung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title_hasilJantung"
            android:textColor="#b20a2c"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/label_hasilDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/label_formDate"
                android:textColor="#b20a2c"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_hasilJantung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_hasilJantung"
                android:textColor="#355C7D"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_hasilRisiko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_hasilTitle"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_hasilRisiko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/label_hasilRisiko"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_hasilRisiko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_hasilRisiko"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="100dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_penjelasanRisiko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_hasilRisiko"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_penejelasan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hasilPenjelasan1"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start"-->
<!--                android:layout_marginLeft="260dp"-->
<!--                android:layout_marginTop="-28dp"-->
<!--                android:text="@string/text_hasilPenjelasan"-->
<!--                android:textColor="@android:color/holo_green_dark"-->
<!--                android:textSize="20dp"-->
<!--                android:textStyle="bold" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hasilPenjelasan2"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginBottom="-5dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_hasilDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/shape2"
                android:padding="10dp"
                android:text="@string/button_hasilDetail"
                android:textSize="17dp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>